# Full-Observability-Demo-Platform

./: .eslintrc.json  .gitignore  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: .dockerignore  .prettierrc  Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/web/src/: instrumentation.ts
apps/web/src/app/: api.ts  layout.tsx  page.tsx
apps/web/src/app/orders/: page.tsx
apps/web/src/app/products/[id]/: page.tsx
apps/web/src/lib/: api.ts  telemetry.ts  utils.ts
apps/web/src/types/: index.ts
docs/: README.md  dashboards.md  demo-script.md  runbook.md  synthetics.md
infra/compose/: docker-compose.yml
otel/collector/: otel-collector.yaml
services/api/: .dockerignore  Dockerfile  package.json
services/api/src/: index.ts  instrumentation.ts
services/api/src/db/: client.ts  migrate.ts  seed.ts
services/api/src/db/migrations/: 001_initial_schema.sql
services/api/src/db/seeds/: 001_sample_data.sql
services/api/src/routes/: admin.ts  orders.ts  products.ts
services/api/src/services/: failure-mode.ts  metrics.ts  redis.ts
services/api/src/types/: index.ts
services/worker/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/worker/app/: __init__.py  __main__.py  celery_app.py  instrumentation.py  logger.py
services/worker/app/db/: __init__.py  connection.py
services/worker/app/tasks/: __init__.py  invoice_generate.py  order_receipt.py
