[tool.poetry]
name = "observability-demo-worker"
version = "1.0.0"
description = "Celery worker service for Observability Demo Platform"
authors = ["Observability Demo Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.4"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
structlog = "^24.1.0"
python-dotenv = "^1.0.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-exporter-otlp = "^1.23.0"
opentelemetry-instrumentation-celery = "^0.44b0"
opentelemetry-instrumentation-psycopg2 = "^0.44b0"
opentelemetry-instrumentation-redis = "^0.44b0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
black = "^24.1.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

